2010-05-08  Eric Belanger  <eric@archlinux.org>

	* wxgtk 2.8.11-1
	* Upstream update
	* Removed old patches

2010-05-01  Ionut Biru     <ibiru@archlinux.org>

	* wxgtk 2.8.10.1-7
	* use system libpng,libjpeg,libtiff (close FS#19216)

2009-10-20  Eric Belanger  <eric@archlinux.org>

	* wxgtk 2.8.10.1-5
	* Added mediactrl support (close FS#15377)
	* Added glib2 build patch
	* Improved description

2009-07-11  Eric Belanger  <eric@archlinux.org>

	* wxgtk 2.8.10.1-4
	* Added security fix (close FS#15469)

2009-05-21  Eric Belanger  <eric@archlinux.org>

	* wxgtk 2.8.10.1-1
	* Upstream update

2009-05-05  Eric Belanger  <eric@archlinux.org>

	* wxgtk 2.8.10-1
	* Upstream update

2009-03-06  Eric Belanger  <eric@archlinux.org>

	* wxgtk 2.8.9.2-1
	* Upstream update
	* Switched to wxpython source tarball

2008-09-26  Eric Belanger  <eric@archlinux.org>

	* wxgtk 2.8.9-1
	* Upstream update
	* Added mediactrl support (close FS#11220)

2008-07-05  Eric Belanger  <eric@archlinux.org>

	* wxgtk 2.8.8-1
	* Upstream update
	* Enabled gnomeprint - needed for wxpython to build
	* Added ChangeLog