@@ -1,8 +1,5 @@
 # $Id$
 # Maintainer: Eric Belanger <eric@archlinux.org>
-# Original Contributor: Tom Newsom <Jeepster@gmx.co.uk>
-# New Version - Contributor: Bob Finch <w9ya@arrl.net>
-# with help from J. Santiago Hirschfeld <jsantiagoh@yahoo.com.ar> aka Angelus
 
 pkgname=wxgtk
 pkgver=2.8.11
@@ -12,8 +9,8 @@ arch=('i686' 'x86_64')
 url="http://wxwidgets.org"
 license=('custom:wxWindows')
 depends=('gtk2' 'gstreamer0.10-base' 'libgl')
-makedepends=('libgnomeprintui' 'gstreamer0.10-base-plugins' 'gconf' 'ccache' 'mesa')
-options=('ccache') # required to build libwx_gtk2u_mmedia
+makedepends=('libgnomeprintui' 'gstreamer0.10-base-plugins' 'gconf' 'mesa')
+changelog=ChangeLog
 #source=(http://downloads.sourceforge.net/wxpython/wxPython-src-${pkgver}.tar.bz2)
 source=(http://downloads.sourceforge.net/wxwindows/wxGTK-${pkgver}.tar.bz2)
 md5sums=('6040933d200037f90f6aa1c5169e7ec6')
@@ -24,17 +21,17 @@ build() {
   cd "${srcdir}/wxGTK-${pkgver}"
   ./configure --prefix=/usr --libdir=/usr/lib --with-gtk=2 --with-opengl --enable-unicode \
     --enable-graphics_ctx --with-gnomeprint --disable-optimize --enable-mediactrl \
-    --with-libpng=sys --with-libxpm=sys --with-libjpeg=sys --with-libtiff=sys || return 1
-  make || return 1
-  make -C locale allmo || return 1
+    --with-libpng=sys --with-libxpm=sys --with-libjpeg=sys --with-libtiff=sys
+  make
+  make -C locale allmo
   cd contrib/src
-  make || return 1
+  make
 }
 
 package() {
   cd "${srcdir}/wxGTK-${pkgver}"
-  make DESTDIR="${pkgdir}" install || return 1
+  make DESTDIR="${pkgdir}" install
   cd contrib/src
-  make DESTDIR="${pkgdir}" install || return 1
-  install -D -m644 ../../docs/licence.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE" || return 1
+  make DESTDIR="${pkgdir}" install
+  install -D -m644 ../../docs/licence.txt "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
