@@ -1,3 +1,8 @@
+2010-09-22  Eric Belanger  <eric@archlinux.org>
+
+	* Removed ccache makedepends
+	* PKGBUILD cleanup
+
 2010-05-08  Eric Belanger  <eric@archlinux.org>
 
 	* wxgtk 2.8.11-1
